--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,1 +1,54 @@
+
 name: CI/CD
+
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
+on:
+
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "" ]
+
+#env:
+  # Use docker.io for Docker Hub if empty
+#  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+#  IMAGE_NAME: ${{ github.repository }}
+
+
+jobs:
+#  build:
+  ubuntu-build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x]
+        
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm install
+      - run: npm run build --if-present
+      
+#      - run: npm test
+#        env:
+#          CI: true
+
+      # - name: Build & Push Docker image
+      #   uses: mr-smithers-excellent/docker-build-push@v3
+      #   with:
+      #       image: amnkashyap/angular                                        #amnkashyap/angularproject
+      #       tag: latest                                    #projectcicd
+      #       registry: docker.io
+      #       dockerfile: Dockerfile
+      #       username: ${{ secrets.DOCKER_USERNAME }}      
+      #       password: ${{ secrets.DOCKER_PASSWORD }} 
