--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,12 @@ on:
 
 
 jobs:
-#  build:
+  build:
   ubuntu-build:
     runs-on: ubuntu-latest
-
+    
     strategy:
-      matrix:
+      matrix: 
         node-version: [18.x]
         
 
@@ -43,12 +43,19 @@ jobs:
 #        env:
 #          CI: true
 
-      # - name: Build & Push Docker image
-      #   uses: mr-smithers-excellent/docker-build-push@v3
-      #   with:
-      #       image: amnkashyap/angular                                        #amnkashyap/angularproject
-      #       tag: latest                                    #projectcicd
-      #       registry: docker.io
-      #       dockerfile: Dockerfile
-      #       username: ${{ secrets.DOCKER_USERNAME }}      
-      #       password: ${{ secrets.DOCKER_PASSWORD }} 
+  Docker:
+    need: build
+      runs-on: ubuntu-latest
+  
+     steps:
+       - uses: actions/checkout@v2
+     
+       - name: Build & Push Docker image
+         uses: mr-smithers-excellent/docker-build-push@v3
+         with:
+            image: hexafold/angular_application                                        
+            tag: latest                                   
+            registry: docker.io
+            dockerfile: Dockerfile
+            username: ${{ secrets.DOCKER_USERNAME }}      
+            password: ${{ secrets.DOCKER_PASSWORD }} 
