--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "" ]
+    branches: [ "main" ]
 
 #env:
   # Use docker.io for Docker Hub if empty
@@ -21,7 +21,7 @@ on:
 
 
 jobs:
-  build:
+#  build:
   ubuntu-build:
     runs-on: ubuntu-latest
     
