--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,6 @@ name: CI/CD
 # documentation.
 
 on:
-
   push:
     branches: [ "main" ]
   pull_request:
@@ -21,8 +20,8 @@ on:
 
 
 jobs:
-#  build:
-  ubuntu-build:
+  build:
+  #ubuntu-build:
     runs-on: ubuntu-latest
     
     strategy:
