--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,19 +42,19 @@ jobs:
 #        env:
 #          CI: true
 
-  # Docker:
-  #   needs: build
-  #   runs-on: ubuntu-latest
+  Docker:
+    needs: build
+    runs-on: ubuntu-latest
   
-  #   steps:
-  #     - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v2
      
-  #     - name: Build & Push Docker image
-  #       uses: mr-smithers-excellent/docker-build-push@v3
-  #       with:
-  #           image: hexafold/angular_application                                        
-  #           tag: latest                                   
-  #           registry: docker.io
-  #           dockerfile: Dockerfile
-  #           username: ${{ secrets.DOCKER_USERNAME }}      
-  #           password: ${{ secrets.DOCKER_PASSWORD }} 
+      - name: Build & Push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v3
+        with:
+            image: hexafold/angular_application                                        
+            tag: latest                                   
+            registry: docker.io
+            dockerfile: Dockerfile
+            username: ${{ secrets.DOCKER_USERNAME }}      
+            password: ${{ secrets.DOCKER_PASSWORD }} 
