change docker image tag -2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,8 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v3
         with:
             image: hexafold/angular_application                                        
-            tag: |     #latest 
-               type=ref,event=branch                                  
+            tag: latest #|     #latest 
+             #type=ref,event=branch                                  
             registry: docker.io
             dockerfile: Dockerfile
             username: ${{ secrets.DOCKER_USERNAME }}      
